plugins {
    id 'com.android.application'
    id 'dev.rikka.tools.refine'
}

def localProps = new Properties()
def localPropsFile = rootProject.file('local.properties')
if (localPropsFile.exists()) {
    localProps.load(localPropsFile.newDataInputStream())
}

android {
    namespace 'io.github.jqssun.displayextend'
    compileSdk 36

    defaultConfig {
        applicationId "io.github.jqssun.displayextend"
        minSdk 26
        targetSdk 35
        versionCode 20
        versionName "0.0.20"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    dependenciesInfo {
        includeInApk = false
        includeInBundle = false
    }

    if (localProps.containsKey("storeFile")) {
        signingConfigs {
            release {
                storeFile file(localProps.getProperty('storeFile'))
                storePassword localProps.getProperty('storePassword')
                keyAlias localProps.getProperty('keyAlias')
                keyPassword localProps.getProperty('keyPassword')
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            if (localProps.containsKey("storeFile")) {
                signingConfig signingConfigs.release
            }
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    
    buildFeatures {
        aidl true
        buildConfig true
    }
    
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    implementation project(':hidden-api-stub')

    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.navigation:navigation-fragment:2.9.7'
    implementation 'androidx.navigation:navigation-ui:2.9.7'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.fragment:fragment:1.8.9'
    implementation 'androidx.core:core-ktx:1.18.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation libs.androidx.window
    compileOnly project(':hidden-api-stub')
    testImplementation libs.junit
    androidTestImplementation libs.androidx.junit
    androidTestImplementation libs.androidx.espresso.core
    implementation 'dev.rikka.shizuku:api:13.1.5'
    implementation 'dev.rikka.shizuku:provider:13.1.5'
    implementation 'dev.rikka.tools.refine:runtime:4.4.0'
    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:6.1'
    implementation "androidx.lifecycle:lifecycle-livedata:2.10.0"
} 